fix(RV-429): Adjust page cutoff for image annatator (#453)

--- a/frontend/src/components/LoadingWrapper.scss
+++ b/frontend/src/components/LoadingWrapper.scss
@@ -47,5 +47,5 @@
 
 .loading-text p {
   font-size: 16px;
-  color: #666; /* Lighter color for subtitle */
+  color: #171717; /* Lighter color for subtitle */
 }
